# kgr

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  kgr  pyproject.toml  setup.py  web-app.yaml
doc/: ideas.md
examples/web-app/apps/: webapp.kgr.yaml
kgr_schema/: component_schema.yaml  tool_schema.yaml  trait_schema.yaml
src/: main.rs
src/kgr/: cli.py  project.py
src/kgr/lang/: error.py  kgr_parser.py  node_builder.py  result.py
src/kgr/lang/node_types/: component_node.py  conjunction_node.py  rule_node.py  rule_type.py
src/kgr/lang/schema/: application_schema.py  base.py  base_schema.py  component.py  component_schema.py  resource_schema.py  schema_factory.py
src/kgr/lang/types/: conjuction_type.py  node_type.py  rule_type.py
test/lang/web-app/: application.kgr.yaml
test/lang/web-app/apps/: web-app.kgr.yaml
test/lang/web-app/claims/: deployable.kgr.yaml
test/lang/web-app/strategies/: reversible.kgr.yaml
test/test_kgr_lang/: test_app_schema.py
test/test_kgr_project/: test_kgr_project.py
test/web-app/base/: deployable.yaml  web-component.yaml
test/web-app/components/: app.yaml  k8s_cluster.yaml
test/web-app/dev/: dev-env.yaml  web-app.yaml
test/web-app/tools/: terraform.yaml
